# Main-project

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  ast.cpp  ast.h  check.txt.dot  double_return.txt  lex.yy.cpp  lexer-with-ast.l  lexer.l  myprog.txt  output.txt  output.wasm  parser  parser-with-ast.y  parser.tab.cpp  parser.tab.hpp  parser.y  records_local.txt  semantics.h  shadowing.txt  shadowing2.txt  simple.txt  temp.txt  temp.txt.dot  test-gloabal.txt  test.txt  test.wasm  test_arrays.txt  test_call1.txt  test_call2.txt  test_for.txt  test_for_rev.txt  test_if.txt  test_new_features.txt  test_opt.txt  test_opt.txt.dot  (+14 more)
compilation_base_tests/: temp.txt  test_forwarding.txt  test_opt.txt  test_records.txt  test_types_hard.txt  test_types_hard2.txt  test_while.txt  types.txt
parsing_tests/fail/: control_errors.txt  routine_no_semicolon.txt  type_after_is.txt
parsing_tests/success/: test4.txt  test5.txt  test6.txt  ultimate_test.txt  ultimate_test.txt.dot
semantic_tests/: test_const_fold_arithmetic.txt  test_const_fold_bool.txt  test_const_fold_comparison.txt  test_forward_decl_ok.txt  test_undeclared_type.txt  test_undeclared_var.txt  undeclared_routine.txt
semantics_nightmare/: semantics_ultimate_test.txt
semantics_nightmare/arrays/: array1.txt  array2.txt  array3.txt  array3.txt.dot  hell_on_dimensions.txt  hell_on_record.txt  hell_on_record.txt.dot
semantics_nightmare/unused_var/: dead_inside.txt  dead_store.txt  dead_store.txt.dot  globals.txt  midsize1.txt  midsize2.txt  records.txt  write_only.txt
tests/: tests-final.txt
tests/fail/: invalid_expression.txt  invalid_record_access.txt  missing_type.txt  nested_routines.txt  no_semicolon.txt  record_semicolon.txt  routine_errors.txt  test1.txt  test2.txt  test3.txt
tests/success/: test1.txt  test2.txt  test3.txt  test7.txt  test8.txt  ultimate_test.txt
